--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "tsx ./src/index.ts -p tsconfig.back.json",
+    "start": "node src/index.js",
     "buildFront": "npx tsc -p tsconfig.front.json",
+    "buildBack": "npx tsc -p tsconfig.back.json",
     "styles": "npx tailwind -i ./public/tailwind.css -o ./public/styles.css --watch",
     "stylesAdmin": "npx tailwind -i ./admin/tailwind.css -o ./admin/daisy.css --watch"
   },
@@ -30,6 +31,7 @@
     "@eslint/js": "^9.6.0",
     "@types/bad-words": "^3.0.3",
     "@types/bcrypt": "^5.0.2",
+    "@types/chart.js": "^4.0.1",
     "@types/cookie-parser": "^1.4.7",
     "@types/cron": "^2.4.0",
     "@types/express": "^4.17.21",
